missing definitions export command

--- a/compose-service-configs/static/rabbitmq/rabbitmq.conf
+++ b/compose-service-configs/static/rabbitmq/rabbitmq.conf
@@ -22,6 +22,7 @@ management.tcp.port = 15672
 ##    rabbitmqctl add_vhost service2vhost
 ##    rabbitmqctl add_user service2user service2pass
 ##    rabbitmqctl set_permissions -p service2vhost service2user '.*' '.*' '.*'
+##    rabbitmqctl export_definitions definitions.json
 ##
 ## Copy the contents of definitions.json, and remove everything except permissions, users, and vhosts
 load_definitions = /etc/rabbitmq/definitions.json
